@@ -57,6 +57,8 @@ typedef unsigned char jmp_buf[6]; /* 2 for the stack pointer, 2 for the return a
 typedef unsigned char jmp_buf[5]; /* 2 for the stack pointer, 3 for the return address. */
 #elif defined (__SDCC_stm8) || defined (__SDCC_gbz80) || defined (__SDCC_hc08) || defined (__SDCC_s08)
 typedef unsigned char jmp_buf[4]; /* 2 for the stack pointer, 2 for the return address. */
+#elif defined (__SDCC_pdk13) || defined (__SDCC_pdk14) || defined (__SDCC_pdk15)
+typedef unsigned char jmp_buf[3]; /* 1 for the stack pointer, 2 for the return address. */
 #else
 typedef unsigned char jmp_buf[RET_SIZE + SP_SIZE + BP_SIZE + SPX_SIZE + BPX_SIZE];
 #endif
